compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_inference_branch_mismatch.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/inference_branch_mismatch.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × inferred types do not match
   ╭─[tests/fixtures/diagnostics/types/inference_branch_mismatch.ml:2:15]
 1 │ fn main() {
 2 │   let value = if true { 1 } else { "one" };
   ·               ─────────────┬────────────
   ·                            ╰── this expression requires `i64`, but another branch or constraint requires `String`
 3 │   println("unreachable")
   ╰────
  help: make both sides of the expression produce the same type or add an
        annotation at the intended boundary
